trunk/Archive2/bf/1763fd8bbbd64a/output
main.cpp:5:11: error: cannot initialize a variable of type 'int *' with an rvalue of type 'int'
    int * q = int();
          ^   ~~~~~
main.cpp:6:11: error: cannot initialize a variable of type 'int *' with an rvalue of type 'int'
    int * r = int{};
          ^
2 errors generated.
