trunk/Archive2/bf/1763fd8bbbd64a/main.cpp

int main()
{
    int * p = 0;
    int * q = int();
    int * r = int{};
}